
  [ Mitsutaka Amano ]
  * Starting new version
  * Up to version of rpm spec file

  [ Prajwal Mohan ]
  * Getting rid of squashfs and union fs. Using ext3 instead for live images 

  [ Bob Spencer ]
  * Updated image-writer script. Better output.

  [ Mitsutaka Amano ]
  * Reverted commit a0a42494e405182a84da8df52e096baf23dbab1b.
  * Added device files in install.sh.

 -- Mitsutaka Amano <mamano@miraclelinux.com>  Wed, 11 Feb 2009 00:54:37 +0900

moblin-image-creator (0.48) gaston; urgency=low

  [ Mitsutaka Amano ]
  * Starting new version.

  [ Prajwal Mohan ]
  * Fixing usb script

  [ Mitsutaka Amano ]
  * Hiding PERL_BADLANG persistent messages when package installation.
  * Updated ja.po.

  [ Prajwal Mohan ]
  * Adding update column in targer view
  * Adding mount in install script
  * Should be using bzImage for nand and not vmlinuz
  * Adding command line options to add repos to yum targets
  * Changing Nand cmd line
  * Changing USB script to accomodate booting through KVM/QEMU
  * Fixing bugs with yum group install
  * Changing fsets
  * Fixing usb script

  [ Mitsutaka Amano ]
  * Fixing a bug about http://bugzilla.moblin.org/show_bug.cgi?id=130
  * Following Prajwal's changelog.
  * Fixing a bug about http://bugzilla.moblin.org/show_bug.cgi?id=135 for apt platform. Thanks to Juan Jesus Ojeda Croissier <juanje.ojeda@gmail.com>.
  * Fixing a bug about http://bugzilla.moblin.org/show_bug.cgi?id=112. Thanks to Juan Jesus Ojeda Croissier <juanje.ojeda@gmail.com>
  * Fixing a bug about http://bugzilla.moblin.org/show_bug.cgi?id=182. Thanks to Juan Jesus Ojeda Croissier <juanje.ojeda@gmail.com>
  * Fixing a bug about http://bugzilla.moblin.org/show_bug.cgi?id=189. Thanks to Juan Jesus Ojeda Croissier <juanje.ojeda@gmail.com>
  * Fixing a bug about http://bugzilla.moblin.org/show_bug.cgi?id=194. Thanks to Juan Jesus Ojeda Croissier <juanje.ojeda@gmail.com>