@@ -40,7 +40,7 @@ buildroot_codename = gutsy
 buildroot_components = main restricted universe multiverse
 
 # What additional packages need to be installed in the buildroot roostrap
-buildroot_extras = squashfs-tools dosfstools syslinux module-init-tools mtools gpgv
+buildroot_extras = squashfs-tools dosfstools syslinux module-init-tools mtools gpgv genisoimage
 
 # What packages need to be installed in the buildroot (outside the rootstrap archive)
 buildroot_packages = initramfs-tools debhelper devscripts liburi-perl kernel-package dpatch grub libncursesw5-dev libncurses5-dev man less vim apt-utils libgtk2.0-dev ssh automake autotools-dev build-essential gtk-doc-tools dh-make hildon-desktop libhildon-1-dev libhildonfm2-dev hildon-desktop-dev
