@@ -13,8 +13,9 @@ moblin-image-creator (0.49) gaston; urgency=low
   [ Mitsutaka Amano ]
   * Reverted commit a0a42494e405182a84da8df52e096baf23dbab1b.
   * Added device files in install.sh.
+  * Using the genisoimage in project environment.
 
- -- Mitsutaka Amano <mamano@miraclelinux.com>  Wed, 11 Feb 2009 00:54:37 +0900
+ -- Mitsutaka Amano <mamano@miraclelinux.com>  Mon, 02 Mar 2009 18:52:04 +0900
 
 moblin-image-creator (0.48) gaston; urgency=low
 
